--- a/MPFR.pod
+++ b/MPFR.pod
@@ -2062,16 +2062,31 @@ Math::MPFR - perl interface to the MPFR (floating point) library.
     Sets $NV to the NV value represented by the string $str.
     If $str expresses a base 2 value, begin it with '0b' or '0B'.
     If $str expresses a base 16 value, begin it with '0x' or '0X.
+    If $str expresses a base 8 value then do not pass $str directly
+    to atonv(). Instead do $NV = atonv(oct2bin($str));
+    (See the oct2bin documentation immediately below.)
     For example:
-      atonv('0x0.89p5'), atonv('0x0.112@2'), atonv('17.125') and
-      atonv('0b0.10001001e5') all return 17.125.
-    NOTE: ORIGINALLY TOOK 2 ARGUMENTS - NOW TAKES ONLY 1, as of
-          Math-MPFR-4.07.
+      atonv('0x0.89p5'), atonv('0x0.112@2'), atonv('17.125'),
+      atonv('0b0.10001001e5') and atonv(oct2bin('0.422p5')) all
+      return 17.125.
+    Any underscoeres included in the given argument will be treated
+    as non-numeric (illegal) characters.
+
+   $str2 = oct2num($str);
+    Treats $str as an octal string, and returns the equivalent
+    base 2 expression of that string, including the '0b'
+    identifying prefix. This enables atonv() to handle octal values.
+    The argument may (but does not need to) contain the 0/0o/0O
+    identifying prefix. Use 'p' or 'P' to separate the mantissa
+    from the exponent, and express the exponent as a base 10
+    integer. The value will be the mantissa multiplied by 2 raised
+    to the power of that base 10 integer. For example:
+      '5p3' == 5 * (2 ** 3) == 40.
+      oct2bin('-5p3') will return the string '-0b101p3'.
 
    $sv = atonum($str); # Needs mpfr-3.1.6 or later
     If $str numifies to an IV, return that IV.
     Else return the NV that is returned by atonv($str).
-
 
    $ret = decimalize($op [, $anything]); # 2nd (optional) arg
                                          # can be any scalar.
