Add Rmpfr_fpif_export_mem() and Rmpfr_fpif_import_mem()
New in mpfr-4.3.0-dev.

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,7 @@
 Revision history for Perl module Math::MPFR
 
 4.46
+  - Add Rmpfr_fpif_import_mem() and Rmpfr_fpif_export_mem(), new in 4.3.0-dev.
   - Allow atonv() to receive octal arguments - via new function oct2bin.
   - Add mpfrtoa_subn. (Tests added to mpfrtoa.t.)
   - In Makefile.PL, exclude "-lquadmath" from the "LIBS" argument passed to
@@ -63,7 +64,8 @@ Revision history for Perl module Math::MPFR
 
 4.35
   - Add Rmpfr_get_float16, Rmpfr_set_float16 and Rmpfr_buildopt_float16_p.
-    All 3 are new in mpfr-4.3.0.
+    All 3 are
+ in mpfr-4.3.0.
   - Overload '%' operator to perform fmod().
   - Accommodate overloading of Math::GMP objects.
   - Alter overloading of left shift and right shift operations to be compatible
